Fix Responses